@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.116 2007-10-07 11:46:49 cmatsuoka Exp $
+$Id: ChangeLog,v 1.117 2007-10-07 16:43:02 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -7,6 +7,7 @@ Stable versions
 	- added ModPlug Tracker IT quirk: ignore sample global volume (fixes
 	  speech in "Deep In Her Eyes Remake", reported by Douglas Carmichael)
 	- added PTM/IMF note slide effects and PTM note slide + retrig effect
+	- added partial support to MED synth sounds (ported from xmp 2.1.0)
 	- fixed copy of overlapping memory areas in IT loader
 	- fixed initialization of channel flags before loading module
 	- fixed PTM sample loop size (tested with abnormality.ptm)
